--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -2,14 +2,229 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ultralytics import YOLO\n",
     "\n",
-    "model = YOLO(\"yolov8n.pt\")  # load an official detection model\n",
-    "results = model.predict(source=\"0\", show=True, classes=[0], conf=0.8)  # Display preds. Accepts all YOLO predict arguments\n"
+    "model = YOLO(\"yolov8l.pt\")  # load an official detection model\n",
+    "# results = model.predict(source=\"0\", show=True, classes=[0], conf=0.8)  # Display preds. Accepts all YOLO predict arguments\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NULL @ 0x178644c40] non-existing SPS 0 referenced in buffering period\n",
+      "[h264 @ 0x178645460] non-existing SPS 0 referenced in buffering period\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0: 384x640 5 persons, 3 cars, 7 umbrellas, 1 handbag, 247.0ms\n",
+      "Speed: 2.2ms preprocess, 247.0ms inference, 1.1ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 5 persons, 2 cars, 6 umbrellas, 1 handbag, 256.6ms\n",
+      "Speed: 1.6ms preprocess, 256.6ms inference, 0.7ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 6 persons, 1 car, 2 backpacks, 5 umbrellas, 273.1ms\n",
+      "Speed: 19.5ms preprocess, 273.1ms inference, 0.7ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 4 persons, 1 car, 2 backpacks, 5 umbrellas, 2 handbags, 198.5ms\n",
+      "Speed: 1.4ms preprocess, 198.5ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 1 car, 1 truck, 1 backpack, 6 umbrellas, 233.6ms\n",
+      "Speed: 1.3ms preprocess, 233.6ms inference, 0.9ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 1 car, 1 truck, 2 backpacks, 7 umbrellas, 1 handbag, 321.9ms\n",
+      "Speed: 11.9ms preprocess, 321.9ms inference, 6.1ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 2 cars, 1 truck, 1 backpack, 7 umbrellas, 190.3ms\n",
+      "Speed: 6.4ms preprocess, 190.3ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 2 cars, 1 truck, 1 backpack, 6 umbrellas, 608.7ms\n",
+      "Speed: 1.5ms preprocess, 608.7ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 2 cars, 1 truck, 7 umbrellas, 1 potted plant, 168.3ms\n",
+      "Speed: 1.4ms preprocess, 168.3ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 4 persons, 1 car, 2 backpacks, 6 umbrellas, 173.7ms\n",
+      "Speed: 11.4ms preprocess, 173.7ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 1 car, 6 umbrellas, 168.4ms\n",
+      "Speed: 1.4ms preprocess, 168.4ms inference, 0.6ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 1 car, 1 truck, 8 umbrellas, 300.8ms\n",
+      "Speed: 1.3ms preprocess, 300.8ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 1 car, 1 truck, 8 umbrellas, 162.8ms\n",
+      "Speed: 1.6ms preprocess, 162.8ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 4 persons, 1 car, 1 truck, 8 umbrellas, 1 handbag, 174.4ms\n",
+      "Speed: 1.8ms preprocess, 174.4ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 1 car, 1 truck, 8 umbrellas, 154.7ms\n",
+      "Speed: 1.6ms preprocess, 154.7ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 4 persons, 1 car, 1 truck, 8 umbrellas, 249.5ms\n",
+      "Speed: 8.8ms preprocess, 249.5ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 1 car, 1 truck, 8 umbrellas, 143.4ms\n",
+      "Speed: 1.7ms preprocess, 143.4ms inference, 0.6ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 5 persons, 1 car, 1 truck, 1 backpack, 7 umbrellas, 144.0ms\n",
+      "Speed: 2.0ms preprocess, 144.0ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 2 persons, 1 car, 7 umbrellas, 165.3ms\n",
+      "Speed: 7.2ms preprocess, 165.3ms inference, 0.3ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 1 car, 7 umbrellas, 1 handbag, 154.0ms\n",
+      "Speed: 1.6ms preprocess, 154.0ms inference, 1.0ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 3 persons, 1 car, 1 truck, 8 umbrellas, 259.8ms\n",
+      "Speed: 1.3ms preprocess, 259.8ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 4 persons, 1 car, 1 truck, 8 umbrellas, 1 handbag, 157.2ms\n",
+      "Speed: 1.3ms preprocess, 157.2ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-04 14:13:08.846 Python[40120:549329] +[IMKClient subclass]: chose IMKClient_Legacy\n",
+      "2024-10-04 14:13:08.846 Python[40120:549329] +[IMKInputSession subclass]: chose IMKInputSession_Legacy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0: 384x640 3 persons, 1 car, 7 umbrellas, 1 handbag, 187.0ms\n",
+      "Speed: 3.3ms preprocess, 187.0ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 4 persons, 1 car, 1 truck, 7 umbrellas, 1 handbag, 283.6ms\n",
+      "Speed: 5.7ms preprocess, 283.6ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 6 persons, 1 car, 1 truck, 7 umbrellas, 1 handbag, 243.4ms\n",
+      "Speed: 2.2ms preprocess, 243.4ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 6 persons, 2 cars, 7 umbrellas, 286.6ms\n",
+      "Speed: 4.5ms preprocess, 286.6ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 5 persons, 2 cars, 7 umbrellas, 278.4ms\n",
+      "Speed: 8.8ms preprocess, 278.4ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 7 persons, 2 cars, 7 umbrellas, 244.4ms\n",
+      "Speed: 1.4ms preprocess, 244.4ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 7 persons, 2 cars, 6 umbrellas, 401.4ms\n",
+      "Speed: 17.3ms preprocess, 401.4ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 8 persons, 1 car, 5 umbrellas, 1 handbag, 216.5ms\n",
+      "Speed: 5.1ms preprocess, 216.5ms inference, 1.2ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 6 persons, 1 car, 1 backpack, 6 umbrellas, 227.2ms\n",
+      "Speed: 2.8ms preprocess, 227.2ms inference, 0.8ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 5 persons, 1 car, 2 backpacks, 7 umbrellas, 263.9ms\n",
+      "Speed: 6.0ms preprocess, 263.9ms inference, 0.7ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 4 persons, 1 car, 1 backpack, 7 umbrellas, 316.7ms\n",
+      "Speed: 10.9ms preprocess, 316.7ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 8 persons, 1 car, 7 umbrellas, 251.5ms\n",
+      "Speed: 1.2ms preprocess, 251.5ms inference, 0.7ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 6 persons, 1 car, 6 umbrellas, 401.7ms\n",
+      "Speed: 7.7ms preprocess, 401.7ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 11 persons, 2 cars, 6 umbrellas, 224.7ms\n",
+      "Speed: 2.3ms preprocess, 224.7ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 8 persons, 2 cars, 6 umbrellas, 267.9ms\n",
+      "Speed: 7.9ms preprocess, 267.9ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 8 persons, 2 cars, 1 backpack, 7 umbrellas, 265.6ms\n",
+      "Speed: 1.6ms preprocess, 265.6ms inference, 0.6ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 7 persons, 2 cars, 2 backpacks, 6 umbrellas, 160.8ms\n",
+      "Speed: 1.3ms preprocess, 160.8ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 8 persons, 2 cars, 2 backpacks, 6 umbrellas, 227.1ms\n",
+      "Speed: 1.3ms preprocess, 227.1ms inference, 0.3ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 8 persons, 2 cars, 2 backpacks, 6 umbrellas, 151.2ms\n",
+      "Speed: 10.6ms preprocess, 151.2ms inference, 0.7ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 9 persons, 2 cars, 1 backpack, 6 umbrellas, 195.7ms\n",
+      "Speed: 1.6ms preprocess, 195.7ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 7 persons, 2 cars, 6 umbrellas, 148.3ms\n",
+      "Speed: 1.8ms preprocess, 148.3ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 6 persons, 2 cars, 1 truck, 1 backpack, 7 umbrellas, 178.1ms\n",
+      "Speed: 1.2ms preprocess, 178.1ms inference, 0.6ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 6 persons, 2 cars, 1 backpack, 5 umbrellas, 151.8ms\n",
+      "Speed: 1.7ms preprocess, 151.8ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 7 persons, 1 car, 1 truck, 1 backpack, 5 umbrellas, 186.1ms\n",
+      "Speed: 1.3ms preprocess, 186.1ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 7 persons, 2 cars, 1 truck, 2 backpacks, 6 umbrellas, 171.2ms\n",
+      "Speed: 1.4ms preprocess, 171.2ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 6 persons, 2 cars, 1 truck, 2 backpacks, 5 umbrellas, 357.7ms\n",
+      "Speed: 1.6ms preprocess, 357.7ms inference, 0.8ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 8 persons, 2 cars, 3 backpacks, 6 umbrellas, 236.1ms\n",
+      "Speed: 1.8ms preprocess, 236.1ms inference, 0.5ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "\n",
+      "0: 384x640 8 persons, 1 car, 1 truck, 1 backpack, 7 umbrellas, 259.7ms\n",
+      "Speed: 1.3ms preprocess, 259.7ms inference, 0.4ms postprocess per image at shape (1, 3, 384, 640)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# URL of the stream\n",
+    "stream_url ='https://hd-auth.skylinewebcams.com/live.m3u8?a=sg5s64egv67uj3otf3vs51cvv6' # -> https://www.skylinewebcams.com/en/webcam/italia/lazio/roma/piazza-di-spagna.html\n",
+    "\n",
+    "cap = cv2.VideoCapture(stream_url)\n",
+    "cap.set(cv2.CAP_PROP_FRAME_WIDTH, 1280)\n",
+    "cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 720)\n",
+    "if not cap.isOpened():\n",
+    "    print(\"Error: Could not open video stream\")\n",
+    "else:\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            print(\"Error: Failed to retrieve frame\")\n",
+    "            break\n",
+    "        rgb_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        enhanced_frame = cv2.convertScaleAbs(frame, alpha=1.2, beta=50)\n",
+    "        results = model(enhanced_frame)\n",
+    "\n",
+    "        annotated_frame = results[0].plot()\n",
+    "        cv2.imshow('YOLOv8 Live Stream', annotated_frame)\n",
+    "\n",
+    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
